--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,12 @@
 <ul>
-  <li><a href=''>Login with Local</a></li>
+  <!--
+    // TODO(materik):
+    // * have it be possible to login with local
+    <li><a href=''>Login with Local</a></li>
+  -->
   <li><a href='/api/v1/login/github'>Login with GitHub</a></li>
   <li><a href='/api/v1/login/google'>Login with Google</a></li>
+  <li><a href='/api/v1/login/twitter'>Login with Twitter</a></li>
 </ul>
 <br />
 <code id='me'>{ }</code>
