--- a/test/index.html
+++ b/test/index.html
@@ -4,6 +4,7 @@
     // * have it be possible to login with local
     <li><a href=''>Login with Local</a></li>
   -->
+  <li><a href='/api/v1/login/facebook'>Login with Facebook</a></li>
   <li><a href='/api/v1/login/github'>Login with GitHub</a></li>
   <li><a href='/api/v1/login/google'>Login with Google</a></li>
   <li><a href='/api/v1/login/twitter'>Login with Twitter</a></li>
